# automated-savings-policy

./: .env.example  package.json  pnpm-lock.yaml  tsconfig.json
contracts/: Cargo.toml  Makefile
contracts/.stellar/identity/: default.toml
contracts/zafegard-policy/: Cargo.toml
contracts/zafegard-policy-sdk/: README.md  package.json  pnpm-lock.yaml
contracts/zafegard-policy-sdk/src/: index.ts
contracts/zafegard-policy/src/: lib.rs  test.rs  types.rs
contracts/zafegard-policy/test_snapshots/test/: test.1.json  test_add_and_remove.1.json  test_add_and_use.1.json
src/: env.d.ts
src/components/: Home.svelte
src/lib/: common.ts
src/pages/: index.astro
