
[workspace]
resolver = "2"

members = ["zafegard-policy"]

[workspace.dependencies]
soroban-sdk = { version = "21.7.5" }
smart-wallet = { git = "https://github.com/kalepail/passkey-kit", branch = "next-dima" }
smart-wallet-interface = { git = "https://github.com/kalepail/passkey-kit", branch = "next-dima" }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
